# agentRoles

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent.md  agentsroles.mcp.json  dev_bootstrap.py  pyproject.toml  run_backend.py  run_demo_mcp_server.py  run_dev.py  run_frontend.py  run_web_console.py
.github/: CODEOWNERS  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug.yml  feature.yml  task.yml
.github/workflows/: README.md  ci.yml  extended-validation.yml
docs/: README.md
docs/architecture/: ARCHITECTURE_LANDSCAPE.md  README.md  agent-capability-architecture.md  agent-capability-v1-design.md  agent-capability-version-plan.md  agent-config-module-design.md  agent-playground-module-design.md  agent-playground-ui-refinement-design.md  agent-registry-layer-design.md  agent-resource-manager-design.md  agent-workspace-root-design.md  case-agent-handoff-design.md  case-coordinator-design.md  core-runtime-design-spec.md  domain-pack-standard-structure.md  education-domain-pack-architecture-brief.md  education-multi-agent-implementation-design.md  education-multi-agent-product-design.md  evaluation-scaffold-design.md  frontend-react-typescript-vite-design.md  llm-adapter-provider-layer-design.md  memory-services-design.md  persistence-layer-design.md  platform-architecture.md
docs/github/: README.md  ci-and-pre-commit.md  github-collaboration-flow.md  github-repository-settings-checklist.md  pre-push-cleanup-checklist.md  review-ownership-boundaries.md
frontend/workspace/: README.md  index.html  (+2 more)
tests/: __init__.py
(+323 files in other folders)
