[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsroles"
version = "0.1.0"
description = "A multi-domain multi-agent platform prototype for local validation and iterative development."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.5,<5",
]

[project.scripts]
agentsroles-backend = "agentsroles.cli:run_backend"
agentsroles-dev = "agentsroles.cli:run_dev"
agentsroles-web = "agentsroles.cli:run_web_console"
agentsroles-frontend = "agentsroles.cli:run_frontend"
agentsroles-demo-mcp = "agentsroles.cli:run_demo_mcp_server"
agentsroles-smoke = "agentsroles.cli:run_backend_smoke_tests"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "agentsroles*",
  "application*",
  "core*",
  "domain_packs*",
  "infrastructure*",
  "interfaces*",
]
